# rebuild-dyn

./: .env.example  .gitignore  .npmrc  .trusted-deps.json  CLEANUP.md  README.md  feature_claude.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.js
.claude/: launch.json  settings.local.json
.github/workflows/: contracts.yml  projections.yml  security.yml
api/: admin-users.js  ai-analyze.js  ai-oc-analyze.js  ai-oracle-board.js  ai-share-blurbs.js  ai-vs-evaluate.js  cfbd.js  feature_claude.md  fleaflicker.js  historical-rosters.js  refresh-startup-adp.js  rosteraudit.js  sleeper-auth.js  snapshot-values.js
api/_lib/: adminAuth.js
docs/: ARCHITECTURE.md  CALCULATIONS.md  historical_players_schema.sql  oc_entries_rls.sql  prospect_seasons_catchable_rate.sql  rookie_draft_plans_schema.sql
docs/migrations/: auth_rate_limits_schema.sql  dc_entries_schema.sql  dc_entries_seed_2016_2025.sql  dc_history_schema.sql  historical_players_data.sql  oc_history_schema.sql  player_contracts_schema.sql  player_projections_schema.sql  (+4 more)
public/: ads.txt
python/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
python/projections/: __init__.py  __main__.py  advanced.py  backtest.py  contracts_table.py  defense.py  defense_scheme.py  environment.py  model.py  nflverse.py  scheme.py  scoring.py  sleeper.py  store.py  usage.py
python/tests/: test_model.py  test_usage.py
scripts/: gen-team-talent.mjs  import-ocs.mjs  import_historical.mjs  safe-install.mjs
src/: App.jsx  constants.js  index.css  main.jsx  styles.js
(+226 files in other folders)
