[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dynasty-projections"
version = "0.1.0"
description = "Weekly NFL fantasy points projection engine for Dynasty Oracle"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "supabase>=2.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
projections = "projections.__main__:main"

[tool.setuptools]
packages = ["projections"]

[tool.pytest.ini_options]
testpaths = ["tests"]
